@@ -20,10 +20,7 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.nifi.bootstrap.notification.NotificationType;
 import org.apache.nifi.bootstrap.util.DumpFileValidator;
 import org.apache.nifi.bootstrap.util.OSUtils;
-import org.apache.nifi.bootstrap.util.RuntimeVersionProvider;
 import org.apache.nifi.bootstrap.util.SecureNiFiConfigUtil;
-import org.apache.nifi.deprecation.log.DeprecationLogger;
-import org.apache.nifi.deprecation.log.DeprecationLoggerFactory;
 import org.apache.nifi.util.file.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -62,7 +59,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
@@ -150,7 +146,6 @@ public class RunNiFi {
     private final Logger cmdLogger = LoggerFactory.getLogger("org.apache.nifi.bootstrap.Command");
     // used for logging all info. These by default will be written to the log file
     private final Logger defaultLogger = LoggerFactory.getLogger(RunNiFi.class);
-    private final DeprecationLogger deprecationLogger = DeprecationLoggerFactory.getLogger(RunNiFi.class);
 
     private final ExecutorService loggingExecutor;
     private volatile Set<Future<?>> loggingFutures = new HashSet<>(2);
@@ -1206,25 +1201,6 @@ public class RunNiFi {
 
         String runtimeJavaVersion = System.getProperty("java.version");
         defaultLogger.info("Runtime Java version: {}", runtimeJavaVersion);
-        final int javaMajorVersion = RuntimeVersionProvider.getMajorVersion();
-        if (javaMajorVersion >= 11) {
-            /* If running on Java 11 or greater, add the JAXB/activation/annotation libs to the classpath.
-             *
-             * TODO: Once the minimum Java version requirement of NiFi is 11, this processing should be removed.
-             * JAXB/activation/annotation will be added as an actual dependency via pom.xml.
-             */
-            final String libJava11Filename = replaceNull(props.get("lib.dir"), "./lib").trim() + "/java11";
-            File libJava11Dir = getFile(libJava11Filename, workingDir);
-            if (libJava11Dir.exists()) {
-                for (final File file : Objects.requireNonNull(libJava11Dir.listFiles((dir, filename) -> filename.toLowerCase().endsWith(".jar")))) {
-                    cpFiles.add(file.getAbsolutePath());
-                }
-            }
-        }
-
-        if (RuntimeVersionProvider.isMajorVersionDeprecated(javaMajorVersion)) {
-            deprecationLogger.warn("Support for Java {} is deprecated. Java {} is the minimum recommended version", javaMajorVersion, RuntimeVersionProvider.getMinimumMajorVersion());
-        }
 
         final StringBuilder classPathBuilder = new StringBuilder();
         for (int i = 0; i < cpFiles.size(); i++) {
@@ -1281,10 +1257,6 @@ public class RunNiFi {
         cmd.add("-Dnifi.bootstrap.listen.port=" + listenPort);
         cmd.add("-Dapp=NiFi");
         cmd.add("-Dorg.apache.nifi.bootstrap.config.log.dir=" + nifiLogDir);
-        if (javaMajorVersion == 9 || javaMajorVersion == 10) {
-            // running on Java 9 or 10, internal module java.xml.bind module must be made available
-            cmd.add("--add-modules=java.xml.bind");
-        }
         cmd.add("org.apache.nifi.NiFi");
         if (isSensitiveKeyPresent(props)) {
             Path sensitiveKeyFile = createSensitiveKeyFile(confDir);
